--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -1,18 +1,5 @@
 .skills {
   padding-top: 120px;
-  &__title {
-    position: relative;
-    text-align: center;
-    @include before_circle;
-    &:before {
-        top: -6px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-  }
-  &__subtitle {
-    text-align: center;
-  }
   &__items {
     margin-top: 60px;
     padding: 0 10px;
@@ -62,6 +49,7 @@
       line-height: 21px;
     }
     &-line {
+      grid-column: 1 / 3;
       width: 350px;
       height: 14px;
       background: #E8E4DE;
