--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -50,6 +50,21 @@
       background-color: #fff;
     }
   }
+  &__triggers {
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 35px;
+  }
+  &__policy {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 14px;
+    input {
+      margin-right: 10px;
+    }
+  }
   &__input {
     position: relative;
     input {
